fix UI results of talents too long

--- a/resources/scss/pages/_talents.scss
+++ b/resources/scss/pages/_talents.scss
@@ -336,7 +336,7 @@
 						font-size: 15px;
 						padding: 0px;
                         text-overflow: ellipsis;
-                        max-width: 140px;
+                        max-width: 148px;
                         display: inline-block;
                         white-space: nowrap;
                         overflow: hidden;
@@ -356,6 +356,13 @@
                             &.city{
                                 text-overflow: ellipsis;
                                 max-width: 165px;
+                                white-space: nowrap;
+                                overflow: hidden;
+                                display: block !important;
+                            }
+                            &.body-type{
+                                text-overflow: ellipsis;
+                                max-width: 107px;
                                 white-space: nowrap;
                                 overflow: hidden;
                                 display: block !important;
